// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toDispatchInOrder fails when the action dispatchs mutations 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toDispatchInOrder()[22m

Expected to not have been dispatched:
 [32m[\\"1\\", \\"2\\", \\"3\\"][39m
Received:
 [31m[\\"1\\", \\"2\\", \\"3\\"][39m"
`;

exports[`.not.toDispatchInOrder fails when the action dispatchs mutations not strictly 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toDispatchInOrder()[22m

Expected to not have been dispatched:
 [32m[\\"1\\", \\"3\\"][39m
Received:
 [31m[\\"1\\", \\"2\\", \\"3\\"][39m"
`;

exports[`.toDispatchInOrder fails when the action does not dispatchs mutations 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toDispatchInOrder()[22m

Expected to have been dispatched:
 [32m[\\"1\\", \\"2\\"][39m
Received:
 [31m[\\"1\\", \\"2\\", \\"3\\"][39m"
`;
